@@ -3,6 +3,7 @@
 - Add support for multiple trust files in a trust.d directory
 - Add troubleshooting info for when the trust db is full
 - In permissive mode, allow audit events when rules say to log it
+- Escape whitespaces in file names put into the file trust database
 
 1.0.3
 - Add startup and shutdown syslog message
